--- a/.github/workflows/Redmi-AX6000-hanwckf.yml
+++ b/.github/workflows/Redmi-AX6000-hanwckf.yml
@@ -39,7 +39,7 @@ jobs:
     
     steps:
     - name: 检查项目分支
-      uses: actions/checkout@main
+      uses: actions/checkout@v4
 
     - name: 初始化编译环境
       env:
